# ai-casino

./: .env.example  .gitignore  .mise.toml  CLAUDE.md  README.md  agentic-stock-trading-system-research.md  implem-plan.md  pyproject.toml  ruff.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
src/: main.py
src/agents/: news.py  risk.py  sentiment.py  technical.py  trader.py
src/data/: market.py  news.py
src/metrics/: __init__.py  performance.py  tracker.py
src/models/: llm.py  sentiment.py
src/strategies/: momentum.py
src/workflows/: trading.py
tests/: conftest.py
tests/test_agents/: test_news.py  test_risk.py  test_sentiment.py  test_technical.py  test_trader.py
tests/test_data/: test_market.py  test_news.py
tests/test_metrics/: test_performance.py  test_tracker.py
tests/test_models/: test_llm.py  test_sentiment.py
tests/test_strategies/: test_momentum.py
tests/test_workflows/: test_trading.py
