[project]
name = "ai-casino"
version = "0.1.0"
description = "Agentic stock trading system with multi-agent architecture"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Technical Analysis
    "pandas==2.3.3",
    "pandas-ta==0.4.71b0",
    "numpy==2.4.1",

    # Sentiment Analysis
    "transformers==4.57.3",
    "torch==2.9.1",

    # LLM & Agents
    "litellm==1.80.11",
    "langgraph==1.0.5",
    "langchain-core==1.2.6",

    # Market Data
    "yfinance==1.0",
    "alpha-vantage==3.0.0",
    "requests==2.32.5",

    # Trading
    "alpaca-py==0.43.2",
    "backtesting==0.6.5",

    # Utilities
    "python-dotenv==1.2.1",
    "rich==14.2.0",
    "loguru==0.7.3",
    "pydantic==2.12.5",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "pytest-mock==3.15.1",
    "ruff==0.14.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
